# jump-profiling-recipe

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  DOCUMENTATION.md  LICENSE  README.md  Snakefile  download_data.sh  environment.yaml  flake.nix  plot.py  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml  ruff.yml
correct/: __init__.py  corrections.py  format_check.py  harmony.py  well_position.py
download_data/ncp/: download_data.sh
inputs/: compound.json  compound_allmodalities_largebatch.json  compound_allmodalities_smallbatch.json  crispr.json  crispr_allmodalities_largebatch_updatedpipeline.json  crispr_allmodalities_smallbatch.json  crispr_allmodalities_smallbatch_updatedpipeline.json  crispr_test.json  gene_chromosome_map.tsv  ncp.json  orf.json  orf_allmodalities_largebatch.json  orf_test.json  pipeline_2.json
inputs/config/: compound.json  compound_DL.json  compound_DL_CPCNN.json  compound_DL_EFNET.json  crispr.json  jump_addons.json  orf.json  orf_trimmed.json  pipeline_1.json  pipeline_2.json  pipeline_3.json
inputs/metadata/: README.md  cpg0016_mandatory_feature_columns.txt  cpg0016_mandatory_feature_columns_without_image_columns.txt  gene_chromosome_map.tsv
preprocessing/: __init__.py  clean.py  feature_selection.py  io.py  metadata.py  metrics.py  normalize.py  sphering.py  stats.py  transform.py
pycytominer/operations/: __init__.py  transform.py
rules/: map.smk  sphering.smk
src/jump_profiling_recipe/cli/: __init__.py  __main__.py  converter.py
src/jump_profiling_recipe/correct/: corrections.py  format_check.py  harmony.py
src/jump_profiling_recipe/preprocessing/: __init__.py  feature_selection.py  io.py  metadata.py  metrics.py  normalize.py  sphering.py  stats.py  transform.py  utils.py
src/jump_profiling_recipe/pycytominer/operations/: __init__.py  correlation_threshold.py  transform.py
src/tests/: test_pipeline_integration.py
src/tests/fixtures/: Snakefile
src/tests/fixtures/rules/: sphering.smk
tests/: test_pipeline_integration.py
tests/cli/: test_converter.py
tests/fixtures/inputs/: file_list.txt
tests/fixtures/inputs/config/: compound_new_data.json  compound_trimmed.json  compound_trimmed_gpu.json  crispr_trimmed.json  orf_cpcnn_trimmed.json  orf_efficientnet_trimmed.json  orf_trimmed.json  pipeline_1_trimmed.json
tests/fixtures/inputs/metadata/: test_mandatory_feature_columns.txt
tests/fixtures/outputs/compound_new_data_public/: profiles_var_mad_int_featselect.parquet  profiles_var_mad_int_featselect_harmony.parquet
tests/fixtures/outputs/compound_trimmed_gpu_public/: profiles_var_mad_int_featselect.parquet  (+1 more)
tests/fixtures/rules/: map.smk
tests/scripts/: copy_parquet_fixture.py
tests/unit/correct/: test_corrections.py
(+30 files in other folders)
